recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: not found: value lengh
  avance(lengh+incrément)
         ^Spiral:2: error: not found: value incrément
  avance(lengh+incrément)
               ^