recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  avance(lengh+incrément)
  gauche(angle)
  
  
}